# core64

./: .gitignore  Cargo.toml  Makefile  README.md
core-kernel/: Cargo.toml  x86_64-unknown-none-core.json
core-kernel/.cargo/: config.toml
core-kernel/asm/: boot.asm
core-kernel/src/: main.rs
core-kernel/src/video/: framebuffer.rs  mod.rs
core-loader/: Cargo.toml
core-loader/src/: file.rs  graphics.rs  main.rs  memory.rs
core-util/: Cargo.toml
core-util/src/: lib.rs
core-util/src/memory/: mod.rs
core64-kernel/: Cargo.toml  x86_64-unknown-none-core64_os.json
core64-kernel/.cargo/: config.toml
core64-kernel/src/: main.rs
core64-kernel/src/video/: framebuffer.rs
core64-loader/: Cargo.toml
core64-loader/src/: file.rs  graphics.rs  main.rs  memory.rs
core64-util/: Cargo.toml
core64-util/src/graphics/: mod.rs
core64-util/src/memory/pmm/: bit_map.rs  mod.rs
